--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "ansible/roles/repos"]
 	path = ansible/roles/repos
 	url = https://github.com/ricofehr/ansible-role-repos
+[submodule "ansible/assets/elementary-osx-theme"]
+	path = ansible/assets/elementary-osx-theme
+	url = git@github.com:ricofehr/elementary-osx-theme
