--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "ansible/assets/elementary-osx-theme"]
 	path = ansible/assets/elementary-osx-theme
 	url = git@github.com:ricofehr/elementary-osx-theme
+[submodule "ansible/roles/libvirtd"]
+	path = ansible/roles/libvirtd
+	url = https://github.com/debops/ansible-libvirtd
