--- a/ansible/roles/devtools/tasks/packages.yml
+++ b/ansible/roles/devtools/tasks/packages.yml
@@ -2,5 +2,5 @@
 
 - name: Install packages
   apt: name={{ item }} state=installed update_cache=true force=yes
-  with_items: "{{ packages }}"
+  with_items: "{{ devtools_packages }}"
   become: yes
