Improve osx theme install

--- a/ansible/roles/devtools/tasks/elementary-osx.yml
+++ b/ansible/roles/devtools/tasks/elementary-osx.yml
@@ -44,3 +44,14 @@
     dest: ~/.local/share/backgrounds/
     compress: no
     times: no
+
+- name: Button-layout
+  shell: >
+    export DISPLAY=:0.0;
+    gsettings set org.pantheon.desktop.gala.appearance button-layout close,minimize,maximize;
+    gsettings set org.gnome.desktop.interface gtk-theme 'Light-Mode';
+    gsettings set org.gnome.desktop.wm.preferences theme 'Light-Mode';
+    gsettings set org.gnome.metacity theme 'Light-Mode';
+    gsettings set org.gnome.desktop.background picture-uri ~/.local/share/backgrounds/sierra.jpg;
+  args:
+    executable: /bin/bash
