Fix ssh package in preseed file

--- a/http/preseed.cfg
+++ b/http/preseed.cfg
@@ -75,6 +75,6 @@ ubiquity ubiquity/success_command string \
     ifup enp0s3; \
     sleep 60; \
     in-target apt-get update -y; \
-    in-target apt-get install -y openssh-server;
+    in-target apt-get install -y ssh;
 
 ubiquity ubiquity/reboot boolean true
